@@ -4,6 +4,13 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Tue, Mar 24, 2009
+---------------------------------------------------------------------
+
+Mon, Mar 23, 2009
+---------------------------------------------------------------------
+- Finishing touches for [Edit Contacts] forms.
+
 Sat, Mar 21, 2009
 ---------------------------------------------------------------------
 - More work on [Edit Contact] form (spec coverage pending).
